PRz website removal update

--- a/index.html
+++ b/index.html
@@ -49,17 +49,16 @@
                 </a>The climbing walls near Technical University (Politechnika Rzeszowska)
             </h3>
 
-            <p>Technical University offers two climbing walls. Climbing walls have a dedicated <a
-                    href="http://sciana.prz.rzeszow.pl/english.php">website</a>, where the main <a
-                    href="http://sciana.prz.rzeszow.pl/english.php">info is presented in English</a>. The climbing
-                walls you can find on <a href="http://sciana.prz.rzeszow.pl/jak_dojechac.php">Google Maps</a>. Walls are
-                open from October to June. During summer Holidays walls are generally closed. Exact days and hours are
-                marked on the schedule. If the schedule is empty, walls are probably closed. Technical University offers
-                two walls: small and big one. Small wall offers mostly top rope and lead climbing with rope but you can
-                find also some place for bouldering. Big wall offers top rope, lead climbing and speed wall. Some wall
-                related news (in PL) are presented on <a href="https://twitter.com/scianaprz">Twitter</a>. If you didn't
-                climb before consider <a href="http://cruxwall.pl/kontakt">climbing course</a> as on the wall we assume
-                that you climb before and you can belay. </p>
+            <p>Technical University offers two climbing walls. The climbing walls had their own website, but due to a decision 
+                by the administrators of the technical university, the simple website created by volunteers no longer met 
+                accessibility criteria and was removed (sic!). In this situation, there is no information in English and 
+                the only source is <a href="https://www.facebook.com/scianaprz/">Facebook</a>. You can find directions on 
+                <a href="https://maps.app.goo.gl/oUx6k4D7vLrLgP4r6">Google Maps</a>. Walls are open from October to June. 
+                During summer Holidays walls are generally closed. Exact days and hours were on website but now I'm not sure..
+                Technical University offers two walls: small and big one. Small wall offers mostly top rope and lead climbing 
+                with rope but you can find also some place for bouldering. Big wall offers top rope, lead climbing and speed wall. 
+                If you didn't climb before consider <a href="http://cruxwall.pl/kontakt">climbing course</a> as on the wall they 
+                assume that you climb before and you can belay!</p>
 
             <h3>
                 <a id="flywall" class="anchor" href="#flywall" aria-hidden="true"><span
