Revise climbing wall details for Technical University2026 content update
Changed wall order from big to small. Updated information about climbing walls near Technical University, including new details on accessibility and available climbing options.

--- a/index.html
+++ b/index.html
@@ -35,30 +35,12 @@
             <p>In Rzeszów there are four public open indoor climbing walls:</p>
 
             <ul>
-                <li><a href="#climbing-wall-near-technical-university-politechnika-rzeszowska">Climbing Walls near
-                    Technical University</a></li>
                 <li><a href="#flywall">Flywall Climbing Centre</a></li>
                 <li><a href="#peron-baltoro-climbing-centre">Peron Baltoro Climbing Centre</a></li>
+                <li><a href="#climbing-wall-near-technical-university-politechnika-rzeszowska">Climbing Walls near
+                    Technical University</a></li>
                 <li><a href="#climbing-wall-near-rzeszow-university">Climbing wall near Rzeszów University</a></li>
             </ul>
-
-            <h3>
-                <a id="climbing-wall-near-technical-university-politechnika-rzeszowska" class="anchor"
-                   href="#climbing-wall-near-technical-university-politechnika-rzeszowska" aria-hidden="true"><span
-                        class="octicon octicon-link"></span>
-                </a>The climbing walls near Technical University (Politechnika Rzeszowska)
-            </h3>
-
-            <p>Technical University offers two climbing walls. The climbing walls had their own website, but due to a decision 
-                by the administrators of the technical university, the simple website created by volunteers no longer met 
-                accessibility criteria and was removed (sic!). In this situation, there is no information in English and 
-                the only source is <a href="https://www.facebook.com/scianaprz/">Facebook</a>. You can find directions on 
-                <a href="https://maps.app.goo.gl/oUx6k4D7vLrLgP4r6">Google Maps</a>. Walls are open from October to June. 
-                During summer Holidays walls are generally closed. Exact days and hours were on website but now I'm not sure..
-                Technical University offers two walls: small and big one. Small wall offers mostly top rope and lead climbing 
-                with rope but you can find also some place for bouldering. Big wall offers top rope, lead climbing and speed wall. 
-                If you didn't climb before consider <a href="http://cruxwall.pl/kontakt">climbing course</a> as on the wall they 
-                assume that you climb before and you can belay!</p>
 
             <h3>
                 <a id="flywall" class="anchor" href="#flywall" aria-hidden="true"><span
@@ -66,13 +48,12 @@
                 FlyWall climbing centre
             </h3>
             <p>
-                Flywall is the biggest climbing centre in Rzeszów. It offers traditional rope climbing and boulder wall.
+                Flywall is the biggest climbing centre in Rzeszów. It offers traditional rope climbing and boulder walls.
                 There are around 530 square meters of a big wall for rope climbing (both top rope and lead climbing).
-                Wall is 11,5m high. Some lines offer automatic belaying machines (so you can be an asshole without partner
-                and keep climbing ;) ). Boulder wall offers 230 square meters for climbing. There is also a fun climbing wall for
-                kids and rope courses. The climbing wall offers courses, classes with an instructor and sections. Wall is placed 
-                on <a href="https://g.page/FlyWall?share">Siemieńskiego 14 street</a>. More details you can find on 
-                <a href="https://www.flywall.pl/">flywall.pl</a>.
+                Wall is 11,5m high. Some lines have automatic belaying machines. Boulder wall offers 430 square meters
+                for climbing. There is also a fun climbing wall for kids and rope courses. The climbing wall offers courses,
+                classes with an instructor and sections. Wall is placed on <a href="https://g.page/FlyWall?share">Siemieńskiego 14 street</a>.
+                More details you can find on <a href="https://www.flywall.pl/">flywall.pl</a>.
             </p>
 
             <h3>
@@ -89,6 +70,22 @@
                 bouldering possibilities and a lot of training accessories like Bachar ladder, campus or system wall.
                 The climbing centre belongs to Rzeszów Mountaineering Club. Probably the most climatic place to climb in
                 Rzeszów.</p>
+
+            <h3>
+                <a id="climbing-wall-near-technical-university-politechnika-rzeszowska" class="anchor"
+                   href="#climbing-wall-near-technical-university-politechnika-rzeszowska" aria-hidden="true"><span
+                        class="octicon octicon-link"></span>
+                </a>The climbing walls near Technical University (Politechnika Rzeszowska)
+            </h3>
+
+            <p>Technical University offers two climbing walls (bigg and small). There is no wall website and the only
+                info source is <a href="https://www.facebook.com/scianaprz/">Facebook</a>. You can find directions on
+                <a href="https://maps.app.goo.gl/oUx6k4D7vLrLgP4r6">Google Maps</a>. Walls are open from October to June.
+                During summer Holidays walls are generally closed. Exact days and hours should be on Facebook.
+                Technical University offers two walls: small and big one. Once the new big wall was opened, the old small
+                one was no longer used. Big wall offers top rope, lead climbing and speed wall. There are no commercial 
+                instructors or bealying machines on the wall, so those climbing there are already experienced climbers.</p>
+
 
             <h3>
                 <a id="climbing-wall-near-rzeszow-university" class="anchor"
